apps/frontend/src/styles.css
/* You can add global styles to this file, and also import other style files */
:root {
  /* Sizes */
  --navbar-height: 64px;

  /* Border */
  --border: 1px solid rgba(0, 0, 0, 0.2);

  /* Colors */
  --extra-light-grey: #f1f1f1;
  --danger-red: #f34d4d;
  --main-blue: #2f2fa2;
  --main-blue-low-opacity: rgba(47, 47, 162, 0.4);
  --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
  --main-blue-lowest-opacity: rgba(47, 47, 162, 0.1);
  --action-gradient: linear-gradient(192.45deg, #f64c72 0%, #f64c72 0%, #fa7b34 100%);
  --green: #13be2f;
  --grey: rgba(0, 0, 0, 0.2);
  --lightblue: #ebebf6;
}

html,
body {
  max-height: 100%;
  max-width: 100%;
}
body {
  margin: 0;
  padding: 0;
}

main {
  display: flex;
  flex-direction: column;
}

* {
  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
}

hr {
  width: 100%;
  border-top: 2px solid var(--main-blue);
}

button {
  font-weight: 900;
}

.action-btn {
  color: white;
  background: var(--action-gradient);
}

.danger-btn {
  color: white;
  background-color: var(--danger-red);
}

.secondary-btn {
  color: white;
  background: var(--main-blue);
}

.link {
  min-width: 10px !important;
  width: 50px;
}

.link-icon {
  position: relative;
  bottom: 2px;
}

.basic-btn {
  color: var(--main-blue);
  background-color: white;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  transition: background-color 5000s ease-in-out 0s;
}

